chore: Drop String template previews